--- a/HomeServerAdministrator/MainWindow.xaml
+++ b/HomeServerAdministrator/MainWindow.xaml
@@ -53,7 +53,7 @@
             <Setter Property="Width" Value="20"/>
             <Setter Property="Height" Value="20"/>
             <Setter Property="Margin" Value="200,0,0,0"/>
-            <Setter Property="Visibility" Value="Visible"/>
+            <Setter Property="Visibility" Value="Hidden"/>
         </Style>
     </Window.Resources>
 
